Initial commit of Framework.